examples/test/testpolicy13593.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13593
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key16: value1
      key1: value20
      key43: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value40
          key26: value23
      podSelector:
        matchLabels:
          key47: value18
